module(
    name = "autolink",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "glog", version = "0.7.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "gperftools", version = "2.17.2")
bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "fastdds", version = "3.1.1")
bazel_dep(name = "platforms", version = "0.0.10")